# web

./: .coverage  .eslintrc.json  auth.py  check_models.py  create_tables.sql  db.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  rout.py  swagger.yaml
TestCases/: test_api.py
front/: 404.html  book.js  booking.html  booking.js  index.html  login.html  main.html  profile.html  search.html  search.js  signup.html  user.js  welcome.html
front/assets/css/: 404.css  booking.css  loginstyles.css  mainstyles.css  profile.css  signupstyles.css  welcomestyles.css
front/assets/sass/: 404.scss  loginstyles.scss  mainstyles.scss  profile.scss  search.scss  signupstyles.scss  welcomestyles.scss
src/: App.js  App.test.js  AudiencePage.test.js  Book.test.js  Bookings.test.js  ContactInfo.test.js  EditMe.test.js  Footer.test.js  Header.test.js  Hero.test.js  Login.test.js  Main.test.js  MyModal.test.js  ProfilePage.test.js  Room.test.js  SignUp.test.js  User.test.js
src/assets/css/: App.css  Bookings.css  Books.css  ContactInfo.css  ContentToBook.css  EditMePage.css  Footer.css  Hero.css  LoginPage.css  MainPage.css  MyModal.module.css  ProfilePage.css  SignUpPage.css
src/assets/sass/: App.scss  Bookings.scss  Books.scss  ContactInfo.scss  ContentToBook.scss  EditMePage.scss  Footer.scss  Hero.scss  LoginPage.scss  MainPage.scss  (+3 more)
src/components/: AudiencePage.jsx  Bookings.jsx  Books.jsx  ContactInfo.jsx  EditMePage.jsx  Footer.jsx  Header.jsx  Hero.jsx  LoginPage.jsx  MainPage.jsx  MyModal.jsx  ProfilePage.jsx  Room.jsx  SighUpPage.jsx  User.jsx
